--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.19",
-    "node-fetch": "^2.6.6",
-    "node-cron": "^3.0.2",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^2.6.6",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.30.0"
   }
 }
